# marketingResApp

./: .gitignore  README.md  pyproject.toml
company-email-extractor/: .gitignore  README.md  pyproject.toml
company-email-extractor/company_email_extractor/: cli.py  crawl.py  excel_io.py  pipeline.py
company-email-extractor/company_email_extractor/search_providers/: __init__.py  serpapi.py
project/: cli.py  excel_io.py  extract_emails.py  models.py  normalize.py  pipeline.py
project/search_providers/: __init__.py  serpapi.py
