[project]
name = "company-email-extractor"
version = "0.1.0"
description = "Extract company websites and emails from Excel or a single URL."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pandas>=2.2",
  "openpyxl>=3.1",
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
]

[project.scripts]
company-email-extractor = "project.cli:app"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

